# pyrite

./: Cargo.toml  readme.md  spec.md
assets/: cover.xcf  font-set.xcf  mini-font-set.xcf
doc/: reference.html
lib/: audio.rs  binding.rs  engine.rs  graphics.rs  importer.py  lib.rs  pass_through.vert  pixel_render.frag  platform.rs  resources.rs  tile_render.frag
player/: main.rs
template/: entry.py
tool/: entry_template.py  main.rs
