[package]
name = "pyrite"
version = "0.3.0"
authors = ["JasperBRiedel <jasper@riedel.tech>"]
publish = false
edition = "2018"
default-run = "tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyrite"
path = "lib/lib.rs"

[[bin]]
name = "tool"
path = "tool/main.rs"

[[bin]]
name = "player"
path = "player/main.rs"

[dependencies]
pyo3 = "0.8.5"
gl = "0.14.0"
image = "0.22.3"
glutin = "0.22.0"
rodio = "0.11.0"
